Fix whitespace issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,30 +13,12 @@ body {
   color: white;
 }
 
-#home {
+#home, #login, #start-menu, #game-page, #signup {
   min-height: 100vh;
   width: 100%;
   background: url("./assets/images/5439922.jpg") no-repeat;
   background-size: cover;
 
-}
-
-#login {
-  min-height: 100vh;
-  background: url("./assets/images/5439922.jpg") no-repeat;
-  background-size: cover;
-}
-
-#start-menu {
-  min-height: 100vh;
-  background: url("./assets/images/5439922.jpg") no-repeat;
-  background-size: cover;
-}
-
-#game-page {
-  min-height: 100vh;
-  background: url("./assets/images/5439922.jpg") no-repeat;
-  background-size: cover;
 }
 
 .logo {
